# ledger-forge-frontend

./: .env.example  .env.test  .gitignore  Cargo.toml  README.md  SETUP_COMPLETE.md  Trunk.toml  design.md  index.html  tailwind.config.js
docs/: DATABASE_SETUP.md  DEPLOYMENT.md  DESIGN_CONCEPT_IMPROVEMENTS.md  DESIGN_IMPLEMENTATION_NOTES.md  DEVELOPMENT.md  FINANCIAL_REPORTING.md  FRONTEND_IMPLEMENTATION.md  FRONTEND_MOCKUPS.md  GUIDE.md  PHASE1_COMPLETE.md  PROGRESS.md  PROGRESS_SNAPSHOT.md  PROJECT_OVERVIEW.md  PROJECT_STATUS.md  QUICKBOOKS_IMPORT.md  QUICKBOOKS_IMPORT_QUICK_REF.md  README.md  SEEDING.md  SEEDING_QUICKSTART.md  TESTING_COVERAGE_UPDATE.md  TESTING_STRATEGY.md  TESTING_SUMMARY.md
docs/archive/: PHASE1_ACCOUNTS_COMPLETE.md  PHASE1_AUTH_COMPLETE.md  PHASE1_COMPLETE.md  PHASE1_DATABASE_MILESTONE.md  PROGRESS.md
frontend/: Cargo.toml  index.html  input.css
frontend/docs/: FRONTEND_ARCHITECTURE.md  FRONTEND_COMPARISON.md  PROGRESS.md
frontend/src/: app.rs
frontend/src/api/: mod.rs
frontend/src/components/: mod.rs
frontend/src/pages/: mod.rs
frontend/src/state/: auth.rs
frontend/src/types/: mod.rs
frontend/src/utils/: mod.rs
migrations/: 20241220000000_financial_reporting_seed_data.sql  20251003175025_init_schema.sql  20251003180129_quickbooks_compatibility.sql
scripts/: README.md  clear-db.sh  examine_quickbooks_data.py  import-quickbooks.sh  seed-dev.sh  seed.sh  test_transactions.sh  verify_import.sql
src/: app.rs  docs.rs  lib.rs  main.rs  seed.rs
src/api/: accounts.rs  auth.rs  bill_payments.rs  bills.rs  client.rs  contacts.rs  invoices.rs  mod.rs  payments.rs  reporting.rs  transactions.rs
src/components/: auth.rs  dashboard.rs  layout.rs  mod.rs  modal.rs  ui.rs
src/handlers/: account.rs  auth.rs  bill.rs  contact.rs  import.rs  invoice.rs  mod.rs  payment.rs  reporting.rs  transaction.rs
src/middleware/: auth.rs  mod.rs
src/models/: account.rs  bill.rs  company.rs  contact.rs  invoice.rs  item.rs  mod.rs  payment.rs  reporting.rs  transaction.rs  user.rs
src/pages/: dashboard.rs  login.rs  mod.rs  not_found.rs
src/pages/accounts/: create.rs  detail.rs  list.rs  mod.rs
src/pages/bill_payments/: create.rs  mod.rs
src/pages/bills/: create.rs  detail.rs  list.rs  mod.rs
src/pages/invoices/: create.rs  detail.rs  list.rs  mod.rs
src/pages/payments/: create.rs  detail.rs  list.rs  mod.rs
src/pages/reporting/: ar_aging.rs  balance_sheet.rs  index.rs  mod.rs  profit_loss.rs  trial_balance.rs
src/pages/transactions/: create.rs  detail.rs  list.rs  mod.rs
src/routes/: mod.rs
src/services/: account.rs  auth.rs  bill.rs  cache.rs  contact.rs  import.rs  invoice.rs  mod.rs  payment.rs  reporting.rs  transaction.rs
src/state/: mod.rs  notify.rs
src/types/: accounts.rs  api.rs  bill_payments.rs  bills.rs  contacts.rs  invoices.rs  mod.rs  payments.rs  reporting.rs  transactions.rs  user.rs
src/utils/: csv_import.rs  errors.rs  format.rs  mod.rs  response.rs  storage.rs
tests/: README.md  account_cache_test.rs  account_service_test.rs  auth_api_test.rs  auth_service_test.rs  bill_service_test.rs  cache_integration_test.rs  contact_service_test.rs  financial_reporting_simple_test.rs  financial_reporting_test.rs  financial_reporting_validation_test.rs  health_check_test.rs  import_service_test.rs  invoice_api_test.rs  migrations_test.rs  payment_service_test.rs  reporting_service_test.rs  transaction_service_test.rs
tests/common/: assertions.rs  cache_test.rs  fixtures.rs  mod.rs  test_db.rs
