[package]
name = "ledger-forge"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "ledger-forge"
path = "src/main.rs"

[[bin]]
name = "seed"
path = "src/bin/seed.rs"

[[bin]]
name = "clear"
path = "src/bin/clear.rs"

[dependencies]
# Web framework
axum = "0.8.6"
tokio = { version = "1.47", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "migrate", "rust_decimal"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Authentication & Security
jsonwebtoken = { version = "10.0.0", features = ["use_pem", "aws_lc_rs"] }
argon2 = "0.5"
uuid = { version = "1.18", features = ["v4", "serde"] }

# Environment & Configuration
dotenvy = "0.15"

# Error Handling
anyhow = "1.0"

# Validation
validator = { version = "0.20", features = ["derive"] }

# Logging & Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Decimal numbers for financial calculations
rust_decimal = { version = "1.36", features = ["serde", "db-postgres"] }

# API Documentation
utoipa = { version = "5", features = ["axum_extras", "chrono", "uuid", "decimal"] }
utoipa-swagger-ui = { version = "9", features = ["axum"] }

# Redis Caching
redis = { version = "0.32.7", features = ["tokio-comp", "json"] }

# CSV parsing
csv = "1.3"

[dev-dependencies]
# Testing framework

# HTTP testing
axum-test = "18"

# HTTP client for integration tests
reqwest = { version = "0.12", features = ["json"] }

# Test utilities
serial_test = "3.0"

# Assertions & utilities
fake = { version = "4.4.0", features = ["derive"] }
