[package]
name = "akowe"
version = "0.1.0"
edition = "2024"

[dependencies]
# Leptos Framework
leptos = { version = "0.6", features = ["csr"] }
leptos_meta = { version = "0.6", features = ["csr"] }
leptos_router = { version = "0.6", features = ["csr"] }

# HTTP Client
gloo-net = { version = "0.5", features = ["http"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Date/Time
chrono = { version = "0.4", features = ["serde", "wasmbind"] }

# Utilities
uuid = { version = "1.8", features = ["v4", "serde", "js"] }
rust_decimal = { version = "1.36", features = ["serde"] }
web-sys = { version = "0.3", features = ["Storage", "Window"] }
wasm-bindgen = "0.2"
gloo-timers = { version = "0.3", features = ["futures"] }
js-sys = "0.3"

# Logging
console_error_panic_hook = "0.1"
console_log = "1.0"
log = "0.4"

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
